--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
+  "homepage": "https://marioapgs.github.io/happy-birthday-2024/",
   "name": "happy-birthday",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
